[project]
name = "changefiledelimiter"
version = "0.1.0"
description = "Change file delimiters easily"
authors = [{ name = "Daniil Shamraev", email = "shamraev.2002@gmail.com" }]
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
dependencies = []


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
changefiledelimiter = "changefiledelimiter.app:main"